Name:           Codeec
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         KC Sivaramakrishnan
Category:       Experimental
Synopsis:       Programming with eventually consistent memory on top of Cassandra.
build-type:     Simple

Library
  Build-Depends:
    base,
    bytestring,
    zeromq4-haskell,
    cereal,
    cassandra-cql,
    containers,
    lens,
    template-haskell,
    z3,
    mtl,
    random,
    uuid,
    text,
    transformers,
    time,
    unix,
    directory
  Exposed-modules:
    Codeec.NameService.SimpleBroker
    Codeec.Marshall
    Codeec.Shim
    Codeec.Client
    Codeec.ClientMonad
    Codeec.Types
    Codeec.TH
    Codeec.Contract
    Codeec.DBDriver
  Other-modules:
    Codeec.Contract.Language
    Codeec.Contract.TypeCheck
    Codeec.ShimLayer.Types
    Codeec.ShimLayer.Cache
    Codeec.ShimLayer.UpdateFetcher
    Codeec.ShimLayer.GC
  Extensions: CPP
  ghc-options: -Wall
