Name:           Codeec
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         KC Sivaramakrishnan
Category:       Experimental
Synopsis:       Programming with eventually consistent memory on top of Cassandra.
build-type:     Simple

Library
  Build-Depends:
    cassandra-cql >= 0.5.0.1  && < 1,
    base,
    bytestring,
    zeromq4-haskell,
    cereal,
    containers,
    lens,
    template-haskell,
    z3 >= 4.0.0,
    mtl,
    random,
    uuid,
    text,
    transformers,
    time,
    unix,
    directory,
    tuple,
    derive,
    process,
    optparse-applicative
  Exposed-modules:
    Codeec.NameService.Types
    Codeec.NameService.SimpleBroker
    Codeec.NameService.LoadBalancingBroker
    Codeec.Marshall
    Codeec.Shim
    Codeec.Client
    Codeec.ClientMonad
    Codeec.Types
    Codeec.TH
    Codeec.Contract
    Codeec.DBDriver
  Other-modules:
    Codeec.Contract.Language
    Codeec.Contract.TypeCheck
    Codeec.Consts
    Codeec.ShimLayer.Types
    Codeec.ShimLayer.Cache
    Codeec.ShimLayer.UpdateFetcher
    Codeec.ShimLayer.GC
  Extensions: CPP
  ghc-options: -w -O2 -threaded

-- Executable LWW_txn
-- main-is:
--    LWW_txn.hs
--  ghc-options: -prof -XCPP -O2 -threaded -osuf p_o -hisuf p_hi -fprof-auto "-with-rtsopts=-N -p -s -h -i0.1"
