Name:           Codeec
Version:        0.0.1
Cabal-Version:  >= 1.2
License:        BSD3
License-File:   LICENSE
Author:         KC Sivaramakrishnan
Category:       Experimental
Synopsis:       Programming with eventually consistent memory on top of Cassandra.
build-type:     Simple

Library
  Build-Depends:
    base,
    cassandra-cql,
    containers,
    monads-tf,
    lens,
    z3,
    template-haskell,
    fgl,
    uuid,
    transformers,
    cereal,
    text,
    random
  Exposed-modules:
    Codeec, SpecCheck, Spec
  Extensions: CPP
